 $Id: ChangeLog,v 1.131.2.21 2008/05/17 15:32:49 uehira Exp $

2008-05-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* SWAPL(a), SWAPS(a), SWAPF(a) : common	declaration in src/winlib.h. 
	* LongFromBigEndian(a) : common	declaration in src/winlib.h. 
	* src/winlib.h : include src/subst_func.h.
	* src/winlib.c : strncmp2(), strcmp2().

2008-05-16  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.94-LIB released.
	* b2d[], d2b[] : common declaration in src/winlib.h.

2008-05-07  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.93-LIB released.
	* src/relay.c : use library (src/win_log.c).

2008-05-01  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.92-LIB released.
	* MF Version 1.1.87. (2008-04-17 --- 2008-04-24)

2008-04-24  Shigeki Nakagawa  <nakagawa@eri.u-tokyo.ac.jp>
	* src/events.c, src/wdisk.c : add USE_LARGE_FS option.
           In very large file system (maybe over 8TB) on linux server,
           use statfs64(2) instead of statfs(2).

2008-04-17  Tsuruoka Hiroshi <tsuru@eri.u-tokyo.ac.jp>
	* bug fix : datej.pl.in
	* MeSO-net : wintosac.c, wintowin.c

2008-04-14  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c, src/hypomhc.c : check FreeBSD OS version.
	* MFH (2008-04-13 --- 2008-04-14)

2008-04-13  Shigeki Nakagawa  <nakagawa@eri.u-tokyo.ac.jp>
	* src/wdisk.c (main): bug fix: initialize eobsize=0 
	                           (reported by M. Sato)

2008-04-07  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.91-LIB released.
	* MF Version 1.1.86. (2008-02-20 --- 2008-04-07)
	* configure.in : check Tcl/Tk8.0jp path.
	* English manuals install to $mandir, and Japanese manuals install
	  to $mandir/ja.
	* man/intro_win.1 : added to dist & install list.

2008-04-07  Urabe Taku <urabe@eri.u-tokyo.ac.jp>
	* src/shmdump.c : fixed bug(?) in option -s (071220)

2008-04-05  Urabe Taku <urabe@eri.u-tokyo.ac.jp>
	* src/shmdump.c: bug fix : unsigned long wsize -> long wsize

2008-02-20  Urabe Taku <urabe@eri.u-tokyo.ac.jp>